Fixed model listing to properly integrate language and voice options of models based on config (still requires config to be valid though). Also distinguishes now between individual models and "toolchain" groups. OpenAPI Spec updated.
